[project]
name = "umamusu-stat-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "mss>=10.0.0",
    "opencv-python>=4.12.0.88",
    "psutil>=7.0.0",
    "pytesseract>=0.3.13",
    "pywin32>=310",
]
